--- a/main.tex
+++ b/main.tex
@@ -14,19 +14,19 @@
 \author{Emil Sayahi}
 \date{\today}
 
-\newcommand{\linktootherpages}{link}
-\newcommand{\shortlinkname}{link}
+\newcommand{\linktootherpages}{https://github.com/emmyoh}
+\newcommand{\shortlinkname}{my GitHub profile}
 \newcommand{\term}{Spring Term}
 \newcommand{\academicyear}{$2023$}
-\newcommand{\faculty}{Faculty of Something}
+\newcommand{\faculty}{Miami University}
 
 \begin{document}
   \createintro
 
   % start lectures
   \input{lectures/lec-01.tex}
-  \input{lectures/lec-02.tex}
-  \input{lectures/lec-03.tex}
+  % \input{lectures/lec-02.tex}
+  % \input{lectures/lec-03.tex}
   % end lectures
 
   \listnotes
