--- a/lectures/lec-01.tex
+++ b/lectures/lec-01.tex
@@ -16,7 +16,7 @@ The Stern-Gerlach experiment demonstrated that the magnetic field of an electron
 Particles have some properties, such as `colour' (with two possible values: black or white), and `hardness' (with two possible values: soft, hard). We can build detectors that, when given many particles, show a long-run probability of detecting a particle with a certain property. These detectors can be repeated (eg, a colour detector followed by another colour detector) without the probability changing. These detectors demonstrate that the properties are also probabilistically independent (as in, the results are not correlated between a particle's colour, hardness, etc).
 
 \begin{definition}
-    The \emph{uncertainty principle} states that the probability of detecting a particle with a certain property is proportional to the probability of detecting a particle with a different property. This is demonstrated in Figure~\ref{fig:experiment1}. In other words, the more certain we are of detecting a particle with a certain property, the less certain we are of detecting a particle with a different property.
+    The \emph{uncertainty principle} states that the probability of detecting a particle with a certain property is inversely proportional to the probability of detecting a particle with a different property. This is demonstrated in Figure~\ref{fig:experiment1}. In other words, the more certain we are of detecting a particle with a certain property, the less certain we are of detecting a particle with a different property.
 \end{definition}
 
 \begin{figure}[h]
