--- a/lectures/lec-01.tex
+++ b/lectures/lec-01.tex
@@ -85,7 +85,7 @@ The Stern-Gerlach experiment, first successfully performed in 1922, demonstrated
 Particles have some properties, such as `colour' (with two possible values: black or white), and `hardness' (with two possible values: soft, hard). We can build detectors that, when given many particles, show a long-run probability of detecting a particle with a certain property. These detectors can be repeated (eg, a colour detector followed by another colour detector) without the probability changing. These detectors demonstrate that the properties are also probabilistically independent (as in, the results are not correlated between a particle's colour, hardness, etc).
 
 \begin{definition}
-    The \emph{uncertainty principle} states that the probability of detecting a particle with a certain property is inversely proportional to the probability of detecting a particle with a different property. This is demonstrated in Figure~\ref{fig:experiment1}. In other words, the more certain we are of detecting a particle with a certain property, the less certain we are of detecting a particle with a different property.
+    The \emph{uncertainty principle} states that the probability of measuring a certain property of a particle is inversely proportional to the probability of measuring a different property of the same particle. This is demonstrated in Figure~\ref{fig:experiment1}. In other words, the more certain we are of measuring one property of a particle, the less certain (or more uncertain) we are of measuring a different property of the same particle.
 \end{definition}
 
 \begin{figure}[h]
@@ -112,7 +112,7 @@ Particles have some properties, such as `colour' (with two possible values: blac
                 edge node {B $125$} (c_right)
                 edge node {W $125$} (c_below);
     \end{tikzpicture}
-    \caption{Repeated detectors that detect colour and hardness, demonstrating the uncertainty principle. By measuring the hardness, we became uncertain of the colour.}
+    \caption{Repeated detectors that detect colour and hardness, demonstrating the uncertainty principle. By measuring the hardness, we became uncertain of the colour; the 250 `black' \& `soft' particles were redetected as 125 black and 125 white.}
     \label{fig:experiment1}
 \end{figure}
 
