--- a/lectures/lec-01.tex
+++ b/lectures/lec-01.tex
@@ -9,7 +9,7 @@
 \begin{definition}
     The \emph{planetary model of the atom} is a model of the atom in which the electrons orbit the nucleus in a circular orbit. The planetary model of the atom was developed by Niels Bohr in 1913.
 \end{definition}
-The Stern-Gerlach experiment, first successfully performed in 1922, demonstrated that the magnetic field of an electron can be used to separate the electron into two different states, one with a magnetic field pointing up and one with a magnetic field pointing down. Silver atoms with random spatial orientations were sent straight between two magnets, with the atoms hitting a detector on the other side. The detector was able to detect which direction the atoms were moving in, and the results showed that the atoms were split into two groups, one with a magnetic field pointing up and one with a magnetic field pointing down–'the magnetism was quantised'. This was not expected–the initial hypothesis was that the atoms would form a continuous pattern instead of falling onto two points on the detector, as the spatial orientations were random.
+The Stern-Gerlach experiment, first successfully performed in 1922, demonstrated that the magnetic field of an electron can be used to separate the electron into two different states, one with a magnetic field pointing up and one with a magnetic field pointing down. Silver atoms with random spatial orientations were sent straight between two magnets, with the atoms hitting a detector on the other side. The detector was able to detect which direction the atoms were moving in, and the results showed that the atoms were split into two groups, one with a magnetic field pointing up and one with a magnetic field pointing down–`the magnetism was quantised'. This was not expected–the initial hypothesis was that the atoms would form a continuous pattern instead of falling onto two points on the detector, as the spatial orientations were random.
 \begin{figure}[htp]
     \centering
     \begin{tikzpicture}[tdplot_main_coords,scale=0.7]
