--- a/lectures/lec-01.tex
+++ b/lectures/lec-01.tex
@@ -77,8 +77,7 @@ The Stern-Gerlach experiment, first successfully performed in 1922, demonstrated
      \pgfresetboundingbox
      \draw[use as bounding box](S1)rectangle(R4);
    
-    \end{tikzpicture}\caption{Stern-Gerlach Experiment}\label{fig:stern_gerlach}\end{figure}
-    \info{Figure~\ref{fig:stern_gerlach} designed by \href{http://clemens.koppensteiner.site}{Clemens Koppensteiner}}
+    \end{tikzpicture}\caption{Stern-Gerlach Experiment. Figured designed by \href{http://clemens.koppensteiner.site}{Clemens Koppensteiner}}\label{fig:stern_gerlach}\end{figure}
 \begin{note}
     An electron orbiting in a circular orbit generates a magnetic field.
 \end{note}
@@ -113,7 +112,7 @@ Particles have some properties, such as `colour' (with two possible values: blac
                 edge node {W $125$} (c_below);
     \end{tikzpicture}
     \caption{Repeated detectors that detect colour and hardness, demonstrating the uncertainty principle. By measuring the hardness, we became uncertain of the colour; the 250 `black' \& `soft' particles were redetected as 125 black and 125 white.}
-    \label{fig:experiment1}
+\label{fig:experiment1}
 \end{figure}
 
 % \subsection{Sub Section 1}
