--- a/lectures/lec-03.tex
+++ b/lectures/lec-03.tex
@@ -5,15 +5,15 @@
 \begin{definition}
   A \emph{vector} is a list of numbers.
   The length (or magnitude; denoted by $\lvert\ket{v}\rvert$) of a vector can be found by calculating the square root of the sum of squares of the horizontal and vertical components.
-  Scalar multiplication can be performed by multiplying every value of a vector by the scalar.
+  Scalar multiplication can be performed by multiplying every value of a vector by the scalar. A \emph{unit vector} is a vector, $\vec{v}$ with a magnitude $\lvert v \rvert = 1$.
   Vector addition can be performed by adding every element in a vector with the element in the corresponding position in another vector.
   Vector multiplication (also referred to as finding a dot product, or an inner product; denoted by the product $\braket{v}{w}$) can be done between two vectors with the same dimensions. If the result of the multiplication is $0$, the two vectors are \emph{orthogonal}.
 \end{definition}
 \begin{example}
-  Row: $\bra{v} = \begin{bmatrix}
+  Row (`bra' in Dirac notation): $\bra{v} = \begin{bmatrix}
     2 & 3 & 4
   \end{bmatrix}$\\
-  Column: $\ket{w} = 
+  Column (`ket' in Dirac notation): $\ket{w} = 
   \begin{bmatrix}
     2\\
     3\\
