--- a/preamble.tex
+++ b/preamble.tex
@@ -32,7 +32,7 @@
 \usepackage{mathtools}
 \usepackage[utf8]{inputenc}
 
-\setmainfont{Inter}
+\setmainfont{XITS}
 
 \DeclarePairedDelimiter\bra{\langle}{\rvert}
 \DeclarePairedDelimiter\ket{\lvert}{\rangle}
