--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,7 @@
   \input{lectures/lec-01.tex}
   \input{lectures/lec-02.tex}
   \input{lectures/lec-03.tex}
+  \input{lectures/lec-04.tex}
   % end lectures
 
   \listnotes
