--- a/main.tex
+++ b/main.tex
@@ -28,6 +28,7 @@
   \input{lectures/lec-02.tex}
   \input{lectures/lec-03.tex}
   \input{lectures/lec-04.tex}
+  \input{lectures/lec-05.tex}
   % end lectures
 
   \listnotes
