--- a/preamble.tex
+++ b/preamble.tex
@@ -31,6 +31,7 @@
 \usepackage[british]{datetime2}
 \usepackage{mathtools}
 \usepackage[utf8]{inputenc}
+\usepackage{gensymb}
 
 \setmainfont{XITS}
 
