--- a/main.tex
+++ b/main.tex
@@ -29,6 +29,8 @@
   \input{lectures/lec-03.tex}
   \input{lectures/lec-04.tex}
   \input{lectures/lec-05.tex}
+  \input{lectures/lec-06.tex}
+  \input{lectures/lec-07.tex}
   % end lectures
 
   \listnotes
