--- a/lectures/lec-07.tex
+++ b/lectures/lec-07.tex
@@ -5,7 +5,7 @@
 \end{note}
 
 \begin{note}
-    If two qubits are \emph{not} entangled, then we can examine each one independently. Additionally, we can represent this state both as a vector in $C^4$ space, and as the tensor rpoduct of two vectors in $C^2$ space.
+    If two qubits are \emph{not} entangled, then we can examine each one independently. Additionally, we can represent this state both as a vector in $C^4$ space, and as the tensor product of two vectors in $C^2$ space.
 \end{note}
 
 Suppose we wanted to perform tensor multiplication with groupings; to do so, we would multiply as we would any other algebraic expression: $\ket{vw} = (a \ket{0} + b \ket{1}) \otimes (c \ket{0} + d \ket{1}) = (ac \ket{00} + ad \ket{01} + bc \ket{10} + bd \ket{11})$, where $\ket{0} = \begin{bmatrix}
