--- a/main.tex
+++ b/main.tex
@@ -31,6 +31,7 @@
   \input{lectures/lec-05.tex}
   \input{lectures/lec-06.tex}
   \input{lectures/lec-07.tex}
+  \input{lectures/lec-08.tex}
   % end lectures
 
   \listnotes
