--- a/preamble.tex
+++ b/preamble.tex
@@ -33,6 +33,8 @@
 \usepackage[utf8]{inputenc}
 \usepackage{gensymb}
 
+\usepackage{adjustbox}
+
 \setmainfont{XITS}
 
 \DeclarePairedDelimiter\bra{\langle}{\rvert}
