--- a/lectures/lec-03.tex
+++ b/lectures/lec-03.tex
@@ -1,4 +1,4 @@
-\lesson{Thu, 2 February 2023, 2:50pm – 4:10pm}{Week 2, Thursday}
+\lesson{Thu, 2 February 2023, 2:50pm -- 4:10pm}{Week 2, Thursday}
 
 `The state of a quantum system corresponds to a vector in a vector space of complex numbers.'
 
