--- a/lectures/lec-04.tex
+++ b/lectures/lec-04.tex
@@ -1,4 +1,4 @@
-\lesson{Tue, 7 February 2023, 2:50pm – 4:10pm}{Week 3, Tuesday}
+\lesson{Tue, 7 February 2023, 2:50pm -- 4:10pm}{Week 3, Tuesday}
 
 Qubits are represented by unit vectors.
 
