--- a/lectures/lec-07.tex
+++ b/lectures/lec-07.tex
@@ -1,7 +1,7 @@
-\lesson{Thu, 23 February 2023, 2:50pm – 4:10pm}{Week 5, Thursday}
+\lesson{Thu, 23 February 2023, 2:50pm -- 4:10pm}{Week 5, Thursday}
 
 \begin{note}
-    A system of $n$ qubits will be in $C^{2^n}$ space; ie, if you preform tensor multiplication on $n$ qubits (each being in $C^2$ space–meaning each vector has two elements), you will get $C^{2^n}$ space–meaning the resultant vector will have $2^n$ elements.
+    A system of $n$ qubits will be in $C^{2^n}$ space; ie, if you preform tensor multiplication on $n$ qubits (each being in $C^2$ space--meaning each vector has two elements), you will get $C^{2^n}$ space--meaning the resultant vector will have $2^n$ elements.
 \end{note}
 
 \begin{note}
