--- a/lectures/lec-08.tex
+++ b/lectures/lec-08.tex
@@ -1,4 +1,4 @@
-\lesson{Tue, 28 February 2023, 2:50pm – 4:10pm}{Week 6, Tuesday}
+\lesson{Tue, 28 February 2023, 2:50pm -- 4:10pm}{Week 6, Tuesday}
 
 Two qubits are entangled if, when we measure (observe) one, the state of the other qubit changes instantaneously. The state of any quantum system corresponds to a unit vector in a vector space; that vector can be represented as a linear combination of basis vectors. If two qubits are \emph{not} entangled, then we can examine (measure) one qubit without affecting the state of the other---they are independent. Suppose that the basis vectors that we are using for the first qubit are $\ket{a_1}$ and $\ket{a_2}$, and the basis vectors that we are using for the second qubit are $\ket{b_1}$ and $\ket{b_2}$. Then the state of this system of two qubits is represented by a vector in $R^2$ like $r\ket{a_0 b_0} + s\ket{a_0 b_1} + t\ket{a_1 b_0} + u\ket{a_1 b_1}$. Since $r$, $s$, $t$, and $u$ are probability amplitudes, $r^2 + s^2 + t^2 + u^2 = 1$.
 
