--- a/lectures/lec-02.tex
+++ b/lectures/lec-02.tex
@@ -1,5 +1,5 @@
 
-\lesson{Tue, 31 January 2023, 2:50pm – 4:10pm}{Week 2, Tuesday}
+\lesson{Tue, 31 January 2023, 2:50pm -- 4:10pm}{Week 2, Tuesday}
 
 \begin{figure}[h]
     \centering
@@ -65,7 +65,7 @@
     \emph{Quantum decoherence} is when the wave function that describes the quantum state of a particle `collapses' (ie, the quantum state can no longer be predicted or described by the wave function). With decoherence, information about the system is lost into the environment; if a quantum system were perfectly isolated (ie, if nothing could interact with it), it would maintain coherence indefinitely.
 \end{definition}
 
-With $n$ qubits, a quantum algorithm can search up to $2^n$ states simultaneously. This is the advantage of quantum computers–modelling complex systems and searching through a large set of possibilities is where quantum computers can be useful.
+With $n$ qubits, a quantum algorithm can search up to $2^n$ states simultaneously. This is the advantage of quantum computers--modelling complex systems and searching through a large set of possibilities is where quantum computers can be useful.
 
 % \subsection{Sub Section 2}
 % \label{sub_sec:sub_section_2}
