--- a/lectures/lec-06.tex
+++ b/lectures/lec-06.tex
@@ -1,4 +1,4 @@
-\lesson{Tue, 14 February 2023, 2:50pm – 4:10pm}{Week 4, Tuesday}
+\lesson{Tue, 14 February 2023, 2:50pm -- 4:10pm}{Week 4, Tuesday}
 
 \begin{definition}
     A \emph{qubit} is a unit vector (`ket') in $C^2$.\
