--- a/main.tex
+++ b/main.tex
@@ -32,6 +32,7 @@
   \input{lectures/lec-06.tex}
   \input{lectures/lec-07.tex}
   \input{lectures/lec-08.tex}
+  \input{lectures/lec-09.tex}
   % end lectures
 
   \listnotes
