--- a/preamble.tex
+++ b/preamble.tex
@@ -35,6 +35,12 @@
 
 \usepackage{adjustbox}
 
+\usepackage[
+    type={CC},
+    modifier={by-nc-sa},
+    version={4.0},
+]{doclicense}
+
 \setmainfont{XITS}
 
 \DeclarePairedDelimiter\bra{\langle}{\rvert}
