--- a/lectures/lec-01.tex
+++ b/lectures/lec-01.tex
@@ -77,7 +77,7 @@ The Stern-Gerlach experiment, first successfully performed in 1922, demonstrated
      \pgfresetboundingbox
      \draw[use as bounding box](S1)rectangle(R4);
    
-    \end{tikzpicture}\caption{Stern-Gerlach Experiment. Figured designed by \href{http://clemens.koppensteiner.site}{Clemens Koppensteiner}}\label{fig:stern_gerlach}\end{figure}
+    \end{tikzpicture}\caption{Stern-Gerlach Experiment. Figured designed by \href{http://clemens.koppensteiner.site}{Clemens Koppensteiner}.}\label{fig:stern_gerlach}\end{figure}
 \begin{note}
     An electron orbiting in a circular orbit generates a magnetic field.
 \end{note}
