--- a/main.tex
+++ b/main.tex
@@ -33,6 +33,8 @@
   \input{lectures/lec-07.tex}
   \input{lectures/lec-08.tex}
   \input{lectures/lec-09.tex}
+  \input{lectures/lec-10.tex}
+  \input{lectures/lec-11.tex}
   % end lectures
 
   \listnotes
