--- a/lectures/lec-03.tex
+++ b/lectures/lec-03.tex
@@ -97,19 +97,19 @@
 \end{example}
 
 \begin{note}
-  $\ket{→} = \begin{bmatrix}
+  $\ket{\rightarrow} = \begin{bmatrix}
     \frac{1}{\sqrt{2}}\\
     -\frac{1}{\sqrt{2}}
   \end{bmatrix}$\\
-  $\ket{←} = \begin{bmatrix}
+  $\ket{\leftarrow} = \begin{bmatrix}
     \frac{1}{\sqrt{2}}\\
     \frac{1}{\sqrt{2}}
   \end{bmatrix}$\\
-  $\ket{↗} = \begin{bmatrix}
+  $\ket{\nearrow} = \begin{bmatrix}
     \frac{1}{2}\\
     \frac{-\sqrt{3}}{2}
   \end{bmatrix}$\\
-  $\ket{↙} = \begin{bmatrix}
+  $\ket{\swarrow} = \begin{bmatrix}
     \frac{\sqrt{3}}{2}\\
     \frac{1}{2}
   \end{bmatrix}$
