--- a/lectures/lec-04.tex
+++ b/lectures/lec-04.tex
@@ -27,30 +27,30 @@ Qubits are represented by unit vectors.
     This means that any vector can be written as a linear combination of these basis vectors.
 
     If we were talking about spin, for example, we could use $R^2$, with the following basis vectors:\\
-    $\ket{↑} = \begin{bmatrix}
+    $\ket{\uparrow} = \begin{bmatrix}
         1\\
         0
     \end{bmatrix}\\
-    \ket{↓} = \begin{bmatrix}
+    \ket{\downarrow} = \begin{bmatrix}
         0\\
         1
     \end{bmatrix}\\
-    \ket{→} = \begin{bmatrix}
+    \ket{\rightarrow} = \begin{bmatrix}
         \frac{1}{\sqrt{2}}\\
         \frac{1}{\sqrt{2}}
     \end{bmatrix}\\
-    \ket{←} = \begin{bmatrix}
+    \ket{\leftarrow} = \begin{bmatrix}
         \frac{1}{\sqrt{2}}\\
         \frac{1}{\sqrt{2}}
     \end{bmatrix}$
 
     Meaning,\\
     $
-    \ket{↗} = \ket{↑} \cdot \ket{→} = \begin{bmatrix}
+    \ket{\nearrow} = \ket{\uparrow} \cdot \ket{\rightarrow} = \begin{bmatrix}
         \frac{1}{2}\\
         \frac{-\sqrt{3}}{2}
     \end{bmatrix}\\
-    \ket{↙} = \ket{↓} \cdot \ket{←} \begin{bmatrix}
+    \ket{\swarrow} = \ket{\downarrow} \cdot \ket{\leftarrow} \begin{bmatrix}
         \frac{\sqrt{3}}{2}\\
         \frac{1}{2}
     \end{bmatrix}
