--- a/lectures/lec-05.tex
+++ b/lectures/lec-05.tex
@@ -2,10 +2,10 @@
 
 `The state of a quantum system is a vector in a vector space of complex numbers.'
 
-Using the following basis vectors, $\ket{↑} = \ket{0} = \begin{bmatrix}
+Using the following basis vectors, $\ket{\uparrow} = \ket{0} = \begin{bmatrix}
     1\\
     0
-\end{bmatrix}$, $\ket{↓} = \ket{1} = \begin{bmatrix}
+\end{bmatrix}$, $\ket{\downarrow} = \ket{1} = \begin{bmatrix}
     0\\
     1
 \end{bmatrix}$, a quantum state can be represented as $a\ket{0} + b\ket{1}$, where $a$ and $b$ are probability amplitudes (ie, $a^2$ is the probability of getting $\ket{0}$, $b^2$ is the probability of getting $\ket{1}$, and $a^2 + b^2 = 1$). To determine if a quantum state is valid, square the values of $a$ and $b$, and then add them together; if the sum of the squares is not equal to $1$, then the state is invalid.
