--- a/lectures/lec-06.tex
+++ b/lectures/lec-06.tex
@@ -52,9 +52,9 @@
     \end{bmatrix} + b \cdot \begin{bmatrix}
         0\\
         1
-    \end{bmatrix}$, where $\ket{v}$ is the interaction between $\ket{←}$ and $\ket{→}$.\\
-    $\ket{v} = \frac{1}{\sqrt{2}} \cdot \ket{←} + \frac{1}{\sqrt{2}} \cdot \ket{→} = \frac{1}{\sqrt{2}} \cdot \begin{bmatrix}\frac{1}{\sqrt{2}}\\\frac{1}{\sqrt{2}}\end{bmatrix} + \frac{1}{\sqrt{2}} \cdot \begin{bmatrix}\frac{1}{\sqrt{2}}\\-\frac{1}{\sqrt{2}}\end{bmatrix} = \begin{bmatrix}\frac{1}{2}\\\frac{1}{2}\end{bmatrix} + \begin{bmatrix}\frac{1}{2}\\-\frac{1}{2}\end{bmatrix} = \begin{bmatrix}1\\0\end{bmatrix}$.\\
-    Therefore, $a = 1$, $b = 0$. $\ket{←}$ and $\ket{→}$, both with their own probabilities, constructively interfered to achieve one certain outcome.
+    \end{bmatrix}$, where $\ket{v}$ is the interaction between $\ket{\leftarrow}$ and $\ket{\rightarrow}$.\\
+    $\ket{v} = \frac{1}{\sqrt{2}} \cdot \ket{\leftarrow} + \frac{1}{\sqrt{2}} \cdot \ket{\rightarrow} = \frac{1}{\sqrt{2}} \cdot \begin{bmatrix}\frac{1}{\sqrt{2}}\\\frac{1}{\sqrt{2}}\end{bmatrix} + \frac{1}{\sqrt{2}} \cdot \begin{bmatrix}\frac{1}{\sqrt{2}}\\-\frac{1}{\sqrt{2}}\end{bmatrix} = \begin{bmatrix}\frac{1}{2}\\\frac{1}{2}\end{bmatrix} + \begin{bmatrix}\frac{1}{2}\\-\frac{1}{2}\end{bmatrix} = \begin{bmatrix}1\\0\end{bmatrix}$.\\
+    Therefore, $a = 1$, $b = 0$. $\ket{\leftarrow}$ and $\ket{\rightarrow}$, both with their own probabilities, constructively interfered to achieve one certain outcome.
 \end{example}
 
 
