--- a/lectures/lec-10.tex
+++ b/lectures/lec-10.tex
@@ -231,10 +231,13 @@ $\mathrm{B}(\ket{01}) = \frac{1}{\sqrt{2}} \ket{01} + \frac{1}{\sqrt{2}} \ket{10
 $\mathrm{B}(\ket{10}) = \frac{1}{\sqrt{2}} \ket{00} - \frac{1}{\sqrt{2}} \ket{11}$\\
 $\mathrm{B}(\ket{11}) = \frac{1}{\sqrt{2}} \ket{01} - \frac{1}{\sqrt{2}} \ket{10}$\\
 
-\begin{exercise}
-    \textbf{Question}: What are the standard basis vectors for $R^4$?\\
+\begin{question}
+    What are the standard basis vectors for $R^4$?
+\end{question}
 
-    \textbf{Solution}:\\
+\hfill
+
+\begin{solution}
     $\begin{bmatrix}
         1\\
         0\\
@@ -260,7 +263,7 @@ $\mathrm{B}(\ket{11}) = \frac{1}{\sqrt{2}} \ket{01} - \frac{1}{\sqrt{2}} \ket{10
         1
     \end{bmatrix}$\\
     $\ket{00}$, $\ket{01}$, $\ket{10}$, $\ket{11}$
-\end{exercise}
+\end{solution}
 
 If one were to pass an input through Bell's Circuit, and then to the reverse Bell's Circuit, the output would be the same as the input.
 
