--- a/lectures/lec-10.tex
+++ b/lectures/lec-10.tex
@@ -132,20 +132,19 @@ $\frac{1}{\sqrt{2}}\begin{bmatrix}
 
 Quantum gates with one input:
 \begin{enumerate}
-    \item Pauli's gate
     \item Identity gate ($\begin{bmatrix}
         1 & 0\\
         0 & 1
     \end{bmatrix}$)
-    \item Z gate ($\begin{bmatrix}
+    \item Pauli-Z gate ($\begin{bmatrix}
         1 & 0\\
         0 & -1
     \end{bmatrix}$; relative phase shift)
-    \item X gate ($\begin{bmatrix}
+    \item Pauli-X (`NOT') gate ($\begin{bmatrix}
         0 & 1\\
         1 & 0
     \end{bmatrix}$; flips the probability amplitudes)
-    \item Y gate ($\begin{bmatrix}
+    \item Pauli-Y gate ($\begin{bmatrix}
         0 & -i\\
         i & 0
     \end{bmatrix}$)
