--- a/lectures/lec-11.tex
+++ b/lectures/lec-11.tex
@@ -36,21 +36,11 @@ As you can see, the last two outputs are not the same, despite the same input; t
                 \end{bmatrix}$\end{adjustbox}}} (end_top)
             (end_top)
                 edge node {} (end_bottom)
-                edge node {\begin{adjustbox}{width=3cm}$\frac{1}{\sqrt{2}}\begin{bmatrix}
+                edge node {\begin{adjustbox}{width=3cm}$\frac{1}{\sqrt{2}}\ket{00} + \frac{1}{\sqrt{2}}\ket{11} = \frac{1}{\sqrt{2}}\begin{bmatrix}
                     1\\
                     0\\
                     0\\
-                    0
-                \end{bmatrix} + \frac{1}{\sqrt{2}}\begin{bmatrix}
-                    0\\
-                    0\\
-                    1\\
-                    0
-                \end{bmatrix} = \frac{1}{\sqrt{2}}\begin{bmatrix}
-                    1\\
-                    0\\
-                    1\\
-                    0
+                    1
                 \end{bmatrix}$\end{adjustbox}} (beyond_top)
             (start_bottom)
                 edge node {} (end_bottom)
