--- a/main.tex
+++ b/main.tex
@@ -35,6 +35,7 @@
   \input{lectures/lec-09.tex}
   \input{lectures/lec-10.tex}
   \input{lectures/lec-11.tex}
+  \input{lectures/lec-12.tex}
   % end lectures
 
   \listnotes
