--- a/lectures/lec-12.tex
+++ b/lectures/lec-12.tex
@@ -3,7 +3,7 @@
 As a reminder, the Pauli-X gate (`NOT' gate) is $X = \begin{bmatrix}
     0 & 1 \\
     1 & 0\\
-\end{bmatrix}$, the Pauli-Y gate is $Y = \begin{bmatrix}
+\end{bmatrix}$, the Pauli-Y gate is $Y = i \begin{bmatrix}
     0 & -1 \\
     1 & 0\\
 \end{bmatrix}$, and the Pauli-Z gate is $Z = \begin{bmatrix}
